--- a/public/Frontend/assets/sass/style.css
+++ b/public/Frontend/assets/sass/style.css
@@ -28,15 +28,41 @@ p {
   line-height: 1.8em;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: #000B47;
-  font-family: "Manrope", sans-serif;
+h1
+{
+  color:black;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
+}
+h2
+{
+  color:black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+}
+h3
+{
+  color:black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 450;
+}
+h4
+{
+  color:black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+}
+h5
+{
+  color:black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 350;
+}
+h6
+{
+  color:black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 300;
 }
 
 ul {
